# ibilsh-bot

./: .env  .gitignore  command_for_start.txt  google requirements.txt  logs.jsonl  main.py  main_backup.txt  main_notify.py  pyproject.toml
credentials/google/: append_payment_row.txt  ibilshbot-7c4d1bbce9ea.json
database/: admin_security.py  admins.py  clients.py  db.py  notes.py  payments.py  pending.py  postpone.py  repairs.py  scooters.py  tg_users.py  users.py
handlers/: admin_assign.py  admin_auth.py  admin_edit.py  admin_panel.py  admin_register.py  cancel_handler.py  faq_handler.py  gs_sync.py  keyboard_utils.py  pers_account_entry.py  personal_account.py  profanity_guard.py  register_client.py  repair_done.py  repair_request.py  start.py
integrations/: gsheets_fleet_matrix.py
services/: faq_ai_yandex.py  google_sheets.py  notifier.py  yookassa_service.py
utils/: bot_commands.py  cleanup.py  encryption.py  notify_backup.txt  notify_utils.py  payments_utils.py  schedule_utils.py  time_utils.py  validators.py  wash_reminder.py
