[project]
name = "ibilsh-bot"
version = "0.1.0"
description = "bot for Ibilsh company"
authors = [
    {name = "Noro-dev-go"}
]
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "python-telegram-bot (>=22.3,<23.0)",
    "psycopg2-binary (>=2.9.10,<3.0.0)",
    "python-dotenv (>=1.1.1,<2.0.0)",
    "apscheduler (>=3.11.0,<4.0.0)",
    "gspread (>=6.2.1,<7.0.0)",
    "oauth2client (>=4.1.3,<5.0.0)",
    "requests (>=2.32.4,<3.0.0)",
    "yookassa (>=3.6.0,<4.0.0)",
    "openai (>=1.98.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
